--- a/cookbook/src/Styles/less/mixins.less
+++ b/cookbook/src/Styles/less/mixins.less
@@ -16,7 +16,7 @@
         font-size: 40px;
         font-family: @secondary-font;
         letter-spacing: 2vw;
-        margin: 0;
+        margin: -1px 0 0 0;
 
         @media @phone {
             display: flex;
@@ -90,7 +90,7 @@
         font-size: 30px;
         font-family: @secondary-font;
         letter-spacing: 20px;
-        margin: 0;
+        margin: -1px 0 0 0;
 
         @media @giant {
             letter-spacing: 1vw;
